--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										<img src="images/blog.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://blog.osismpksmaniwa.web.id/blog" class="link">Blog</a></h3>
+										<h3><a href="https://shiroezero.github.io/tentangkamu" class="link">Blog</a></h3>
 										<p>Annoucement, information regarding Organization and schools</p>
 									</header>
 								</article>
