--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Big Picture by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	APA LIAT LIAT!!
 -->
 <html>
 	<head>
@@ -16,14 +14,15 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>HBD KAMU !!</h1>
+				<h1>
+					HBD KAMU!!</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Ucapku</a></li>
 						<li><a href="#one">Sedikit Harapku</a></li>
 						<li><a href="#two">Aku, buatmu</a></li>
 						<li><a href="#work">Ini buat kamu!</a></li>
-						<li><a href="#contact">Rindu?</a></li>
+						<li><a href="#contact">Jadi,</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -34,9 +33,9 @@
 					<header>
 						<h2>Ucapku.</h2>
 					</header>
-					<p>Heyy!!, udah april aja ya?&nbsp; <strong>Selamat Ulang Tahun</strong> &nbsp;kamuu!!. Doaku untukmu adalah segala harap terbaik bagimu, agar senyummu dapat selalu merekah indah selalu !. Sayang kamu !!</p>
+					<p>Heyy kamuuu?!, Kaget ga hayo?!?.&nbsp;<strong>Selamat Ulang Tahun&nbsp;</strong> Kamuu!!. Di umur yang ke 19 tahun ini, dalah segala harap terbaik bagimu, agar senyummu dapat selalu merekah indah selalu !. Sayang kamu !!</p>
 					<footer>
-						<a href="#one" class="button style2 down">elalu!!More</a>
+						<a href="#one" class="button style2 down">Kebawahh!</a>
 					</footer>
 				</div>
 			</section>
@@ -45,11 +44,9 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>Sedikit Harapku</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p> Diumurmu  yang ke 19 tahun ini, semoga banyak hal yang sebelumnya </p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -58,11 +55,9 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Who I Am</h2>
+						<h2>Aku, buatmu</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>aku bisa jadi aapasdklasdklasdjklasjdkljd alskdfjklasjd askldjaskl sad askdj skladjsakl jlask djsakdjsakldj lkaj dklasjlk jaskl klsajdl kadskla jdklsa jdlkajsd lksajd klasj dlkas jlkasj lka&nbsp; jaslk jdskladj salkjd klasd jlkasjklsadj slak jdlaks jdlkasj dlkajklsadj skla djalskd jaklsdj askldj askldj klas djlkas jklas jsalkj slakj sklaj laksjkls klasd jklasdj kl asdjklas djklas lkd jslaj lkasd jklasdj lksd jlaksd jlkasd jsklajd lkasjd lkasjd klasjdl kasad sjlsa jlsa jl ajslk jlsaj lsa jls ajlks ajlskaj dlkas jdlkasdj lask jlkasdj laskjd lask jlsakdj lkaj lkasj&nbsp;</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -71,10 +66,8 @@
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>5 bulan</h2>
+						<p>5 bulan bareng kamu tuh. bener-bener kek keajaiban deh!. banyak hal yang masih belum aku tau dari kamu sih.., tapi kebanyakan dari hal</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -95,7 +88,7 @@
 								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Ko taganku hitem ya?" alt="" /></a>
 							</article>
 						</div>
 
@@ -106,8 +99,9 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
-						<h2>Rindu ?</h2>
-						<p>Rindu ga tuh hayoo?!!?!. Coba <a href="https://shiroezero.github.io/tentangkamu">kesini</a> deh!!</p>
+						<h2>Jadi,</h2>
+						<p><br>
+					    Sesuatu yang lain nihh! <a href="shiroezero.github.io/tentangkamu">kesini deh!</a></p>
 					</header>
 </div>
 			</section>
@@ -116,18 +110,12 @@
 			<footer id="footer">
 
 				<!-- Icons -->
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+					<ul
 					</ul>
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">Love</a></li>
+						<li> Samting that i made with <a href="https://html5up.net">Love</a></li>
 					</ul>
 
 			</footer>
