--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<header>
 						<h2>Jadi,</h2>
 						<p><br>
-					    Sesuatu yang lain nihh! <a href="shiroezero.github.io/tentangkamu">kesini deh!</a></p>
+					    Sesuatu yang lain nihh! <a href="https://shiroezero.github.io/tentangkamu">kesini deh!</a></p>
 					</header>
 </div>
 			</section>
@@ -115,7 +115,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li> Samting that i made with <a href="https://html5up.net">Love</a></li>
+						<li> Samting that i made with <a href="">Love</a></li>
 					</ul>
 
 			</footer>
