--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Ko taganku hitem ya?" alt="" /></a>
+								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="<a href=shiroezero.github.io/tentangkamu/blog/generic.html">"Ko tanganku hitem ya?"</a>" alt="" /></a>
 							</article>
 						</div>
 
