--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 					<ul class="menu">
-						<li> Samting that i made with <a href="">Love</a></li>
+						<li> Samting that i made with <a href="blog/index.html">Love</a></li>
 					</ul>
 
 			</footer>
