--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 				<div class="content">
 					<header>
 						<h2>5 bulan</h2>
-						<p>5 bulan bareng kamu tuh. bener-bener kek keajaiban deh!. banyak hal yang masih belum aku tau dari kamu sih.., tapi kebanyakan dari hal</p>
+						<p>5 bulan bareng kamu tuh. bener-bener kek keajaiban deh!. banyak hal yang masih belum aku tau dari kamu sih.., <br>
+						  <br>
+				         <em>"Mau bacain samting </em>g<em>a? coba <a href="shiroezero.github.io/aorasaphiere/note">sini deh.</a>"</em></p>
 					</header>
 
 					<!-- Gallery  -->
@@ -109,7 +111,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 					<ul class="menu">
-						<li> Samting that i made with <a href="blog/index.html">Love</a></li>
+						<li> Samting that i made with <a href="">Love</a></li>
 					</ul>
 
 			</footer>
