--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<h2>5 bulan</h2>
 						<p>5 bulan bareng kamu tuh. bener-bener kek keajaiban deh!. banyak hal yang masih belum aku tau dari kamu sih.., <br>
 						  <br>
-				         <em>"Mau bacain samting </em>g<em>a? coba <a href="shiroezero.github.io/aorasaphiere/note">sini deh.</a>"</em></p>
+				         <em>"Mau bacain samting </em>g<em>a? coba <a href="note/">sini deh.</a>"</em></p>
 					</header>
 
 					<!-- Gallery  -->
