--- a/note/index.html
+++ b/note/index.html
@@ -4,7 +4,7 @@ Yahya Arya Putra, 14 april 2021
 -->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>🎉Selamat Ulang Tahun !!🎉</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@ Yahya Arya Putra, 14 april 2021
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">SELAMAT ULANG TAHUN!!</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">🎉SELAMAT ULANG TAHUN!!🎉</span>
 								</a>
 
 							<!-- Nav -->
@@ -38,10 +38,8 @@ Yahya Arya Putra, 14 april 2021
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="https://shiroezero.github.io/aorasaphiere">Home</a></li>
+							<li><a href="tekenaja.html">Teken aja!</a></li>
 						</ul>
 					</nav>
 
@@ -49,18 +47,18 @@ Yahya Arya Putra, 14 april 2021
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Tulisanku Tentang Kamu.</h1>
-								<p>Jadi, aku minta kamu inget bahwa hari ini, detik ini,&nbsp; hal ini ku tulis. - 14, april, 2020.</p>
+								<h1>Tulisanku Tentangmu.</h1>
+								<p>Jadi, aku minta kamu inget bahwa hari ini, detik ini.&nbsp; Hal ini ku tulis. - 14, april, 2020.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
 									<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Magna</h2>
+									<a href="08nov2020.html">
+										<h2>08 November 2020</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Gimana sih aku ketemu kamu?. Jujur, "niat" itu gapernah ada. yang aku tau, aku bakal bahagia hari itu.</p>
 										</div>
 									</a>
 							  </article>
@@ -68,10 +66,12 @@ Yahya Arya Putra, 14 april 2021
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
+									<a href="andai/">
+										<h2>Diamku.</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>"Karena ngeliat kamu waktu kamu tiba-tiba liat balik ke aku, sungguh merupakan hal menyenangkan paling memalukan."
+												-Desember,2020.
+											</p>
 										</div>
 									</a>
 								</article>
@@ -90,10 +90,10 @@ Yahya Arya Putra, 14 april 2021
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
+									<a href="janji.html">
+										<h2>Janjimu ?</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Bicara soal janji yang pernah kamu berikan!. Juga secuil kepercayaan yang aku mulai tanamkan.</p>
 										</div>
 									</a>
 								</article>
@@ -194,7 +194,7 @@ Yahya Arya Putra, 14 april 2021
 		      
 		      <footer id="footer">
 						<div class="inner">
-						  <h>Uda selesai baca cantik?. Kalo mau ke halaman utama,&nbsp; <a href="https://shiroezero.github.io/aorasaphiere">klik sini !</a>.</h>
+						  <h>Apa-apa aja yang ada disini, uda disiapin sejak lama bahkan sebelum aku mulai berbicara tentang hal ini. Aku harap aora suka, meskipun cuman sekedar bacain hal kecil seperti ini. Terimakasih ❤️ !!&nbsp; <a href="https://shiroezero.github.io/aorasaphiere">klik sini !</a>.</h>
 					<ul class="copyright">
 		<li>Untuk segala harapmu, semangat !!</li>
 		<li>Masih kepo sama sesutu ? sini coba.</li>
