--- a/note/index.html
+++ b/note/index.html
@@ -37,9 +37,8 @@ Yahya Arya Putra, 14 april 2021
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
 							<li><a href="https://shiroezero.github.io/aorasaphiere">Home</a></li>
-							<li><a href="tekenaja.html">Teken aja!</a></li>
+							<li><a href="">Teken aja!</a></li>
 						</ul>
 					</nav>
 
@@ -55,10 +54,10 @@ Yahya Arya Putra, 14 april 2021
 									<span class="image">
 									<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="08nov2020.html">
+									<a href="shiroezero.github.io/aorasaphiere/note/08nov2020">
 										<h2>08 November 2020</h2>
 										<div class="content">
-											<p>Gimana sih aku ketemu kamu?. Jujur, "niat" itu gapernah ada. yang aku tau, aku bakal bahagia hari itu.</p>
+											<p>Gimana sih aku ketemu kamu?. Jujur, "niat" itu gapernah ada. Yang aku tau, aku bakal bahagia hari itu.</p>
 										</div>
 									</a>
 							  </article>
@@ -66,7 +65,7 @@ Yahya Arya Putra, 14 april 2021
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="andai/">
+									<a href="shiroezero.github.io/aorasaphiere/note/andai">
 										<h2>Diamku.</h2>
 										<div class="content">
 											<p>"Karena ngeliat kamu waktu kamu tiba-tiba liat balik ke aku, sungguh merupakan hal menyenangkan paling memalukan."
@@ -90,7 +89,7 @@ Yahya Arya Putra, 14 april 2021
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="janji.html">
+									<a href="shiroezero.github.io/aorasaphiere/note/janji">
 										<h2>Janjimu ?</h2>
 										<div class="content">
 											<p>Bicara soal janji yang pernah kamu berikan!. Juga secuil kepercayaan yang aku mulai tanamkan.</p>
