--- a/note/index.html
+++ b/note/index.html
@@ -54,7 +54,7 @@ Yahya Arya Putra, 14 april 2021
 									<span class="image">
 									<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="shiroezero.github.io/aorasaphiere/note/08nov2020">
+									<a href="08nov2020/">
 										<h2>08 November 2020</h2>
 										<div class="content">
 											<p>Gimana sih aku ketemu kamu?. Jujur, "niat" itu gapernah ada. Yang aku tau, aku bakal bahagia hari itu.</p>
@@ -65,7 +65,7 @@ Yahya Arya Putra, 14 april 2021
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="shiroezero.github.io/aorasaphiere/note/andai">
+									<a href="andai/">
 										<h2>Diamku.</h2>
 										<div class="content">
 											<p>"Karena ngeliat kamu waktu kamu tiba-tiba liat balik ke aku, sungguh merupakan hal menyenangkan paling memalukan."
@@ -89,7 +89,7 @@ Yahya Arya Putra, 14 april 2021
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="shiroezero.github.io/aorasaphiere/note/janji">
+									<a href="janji/">
 										<h2>Janjimu ?</h2>
 										<div class="content">
 											<p>Bicara soal janji yang pernah kamu berikan!. Juga secuil kepercayaan yang aku mulai tanamkan.</p>
