--- a/note/index.html
+++ b/note/index.html
@@ -37,8 +37,8 @@ Yahya Arya Putra, 14 april 2021
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="https://shiroezero.github.io/aorasaphiere">Home</a></li>
-							<li><a href="">Teken aja!</a></li>
+							<li><a href="https://shiroezero.github.io/aorasaphiere/note">Home</a></li>
+							<li><a href="https://shiroezero.github.io/aorasaphiere/tekenaja.html">Teken aja!</a></li>
 						</ul>
 					</nav>
 
@@ -65,7 +65,7 @@ Yahya Arya Putra, 14 april 2021
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="andai/">
+									<a href="diamku/">
 										<h2>Diamku.</h2>
 										<div class="content">
 											<p>"Karena ngeliat kamu waktu kamu tiba-tiba liat balik ke aku, sungguh merupakan hal menyenangkan paling memalukan."
