--- a/note/08nov2020/index.html
+++ b/note/08nov2020/index.html
@@ -39,11 +39,24 @@ Made by me. Apa lihat-lihat?
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Generic Page</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1>08 November 2021</h1>
+							<ul class="alt">
+								<li>- Awalnya...</li>
+								<li></li>
+							</ul>
+							<span class="image left"><img src="https://shiroezero.github.io/aorasaphiere/note/images/pic01.jpg" width="177" height="163" alt="" /></span>
+							<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Pada saat itu hari senin, tepatnya minggu kedua di bulan november. Satu hari yang baik untuk memulai kembali segala hal dari awal (kupikir). Seperti senin yang memulai kembali hari dari tiap minggunya. Untuk ulang tahunku esok, kuharap segala hal baru yang kudapati kelak mengubahku dan memberi arti baru pada diri ini. Mengingat di hari sebelumnya telah ada jadwal untuk ikut berproses pada salah satu hobi lama, bermain teater. Yang ku ingin hanyalah mencari kesenangangan pada hari ulang tahunku esok dan tiada hal lain selain harapan yang telah kusebut tadi. Namun kau tau?, yang kutemukan lebih dari yang kuharap !!.</p>
+							<p>Hari itu pun tiba, terbangun seperti biasa, makan seperti biasa, semua hal biasa mengawali hari itu. Ini ulang tahunku, tentu saja ucapan selamat ulang tahun dari teman-teman meramaikan handphone. Yap, “sok ngartis” benar sekali!. Hari itu, semua yang memberiku ucapan ulang tahun masuk ke snap whatsapp. Jadi, kamu pikir siapa yang mau pura-pura tak melihat kalau aku sedang berulang tahun?. Maksudku, tak mungkin ada yang mengingat bila hal tersebut tak kulakukan. Lantas untuk apa kulakukan katamu?, hanya ada segelintir hal yang sangat dekat sebelum aku berkipir untuk menjadi artis(wkwk). Hanya secuil apresiasi lah yang ingin kuberi pada orang yang benar2 mengingat ulang tahunku. Di sisi lain, untuk mereka yang melihat dari snap aku hanya ingin berterimakasih.</p>
+							<p>Semua hal biasa di hari itu terasa lebih menyenangkan, sudah jelas, karena hari ini hari ulang tahunku. Tertinggal jauh dibelakang untuk segala pikiran burukku, terimakasih atas hari ini, sungguh diriku benar-benar bersyukur.</p>
+							<ul class="alt">
+								<li>- Beberapa jam berlalu..</li>
+								<li></li>
+							</ul>
+							<p>Waktu itu pukul 11 siang, aku bersiap untuk berangkat ke tempat yang sudah menjadi agendaku hari ini. SMP Negeri 2 Sukodono, tempat dimana diri ini belajar untuk menerima diri ini sendiri. (banyak hal, kuceritakan nanti!).</p>
+							<p>Tak pernah kusangka kalau disana akan bertemu banyak orang dari luar TSG. Maksudku, bahkan mam (guruku) tak berkata apa-apa saat aku berkata akan datang mengikuti kegiatan proses ini. Saat aku datang sudah banyak wajah asing yang tak kukenal. Ketahuilah, aku ini pemalu, meskipun (kalau kau pikir) tempat ini juga tidak lah asing bagiku.</p>
+							<p>Mas nizar!, dialah orang pertama yang kusapa waktu itu. Sembari mencoba mengakrabkan diri, di dalam sanggar aku bertemu mas ping, kemudian mba nisa, elza dan 2 teman lama dari tsg, yap syaif dan mediana. Tak lama rendy dan usama datang, disusul om dan mam juga zhafira. Kupikir selesai sudah estafet jantung untuk berkenalan kepada orang-orang baru dari SMA Negeri 1 Taman. Namun ternyata muncul lagi 1 karakter asing. Datang dengan anggun dan lugunya, yang terbesit kala itu hanyalah, “kupikir aku mengenalnya”.</p>
+							
+						
 						</div>
 					</div>
 
