--- a/note/08nov2020/index.html
+++ b/note/08nov2020/index.html
@@ -41,7 +41,7 @@ Made by me. Apa lihat-lihat?
 						<div class="inner">
 							<h1>08 November 2021</h1>
 							<ul class="alt">
-								<li>- Awalnya...</li>
+								<li><b>- Awalnya…</b></li>
 								<li></li>
 							</ul>
 							<span class="image left"><img src="https://shiroezero.github.io/aorasaphiere/note/images/pic01.jpg" width="177" height="163" alt="" /></span>
@@ -49,14 +49,36 @@ Made by me. Apa lihat-lihat?
 							<p>Hari itu pun tiba, terbangun seperti biasa, makan seperti biasa, semua hal biasa mengawali hari itu. Ini ulang tahunku, tentu saja ucapan selamat ulang tahun dari teman-teman meramaikan handphone. Yap, “sok ngartis” benar sekali!. Hari itu, semua yang memberiku ucapan ulang tahun masuk ke snap whatsapp. Jadi, kamu pikir siapa yang mau pura-pura tak melihat kalau aku sedang berulang tahun?. Maksudku, tak mungkin ada yang mengingat bila hal tersebut tak kulakukan. Lantas untuk apa kulakukan katamu?, hanya ada segelintir hal yang sangat dekat sebelum aku berkipir untuk menjadi artis(wkwk). Hanya secuil apresiasi lah yang ingin kuberi pada orang yang benar2 mengingat ulang tahunku. Di sisi lain, untuk mereka yang melihat dari snap aku hanya ingin berterimakasih.</p>
 							<p>Semua hal biasa di hari itu terasa lebih menyenangkan, sudah jelas, karena hari ini hari ulang tahunku. Tertinggal jauh dibelakang untuk segala pikiran burukku, terimakasih atas hari ini, sungguh diriku benar-benar bersyukur.</p>
 							<ul class="alt">
-								<li>- Beberapa jam berlalu..</li>
+								<li><b>- Jam pun berlalu…</b></li>
 								<li></li>
 							</ul>
 							<p>Waktu itu pukul 11 siang, aku bersiap untuk berangkat ke tempat yang sudah menjadi agendaku hari ini. SMP Negeri 2 Sukodono, tempat dimana diri ini belajar untuk menerima diri ini sendiri. (banyak hal, kuceritakan nanti!).</p>
 							<p>Tak pernah kusangka kalau disana akan bertemu banyak orang dari luar TSG. Maksudku, bahkan mam (guruku) tak berkata apa-apa saat aku berkata akan datang mengikuti kegiatan proses ini. Saat aku datang sudah banyak wajah asing yang tak kukenal. Ketahuilah, aku ini pemalu, meskipun (kalau kau pikir) tempat ini juga tidak lah asing bagiku.</p>
-							<p>Mas nizar!, dialah orang pertama yang kusapa waktu itu. Sembari mencoba mengakrabkan diri, di dalam sanggar aku bertemu mas ping, kemudian mba nisa, elza dan 2 teman lama dari tsg, yap syaif dan mediana. Tak lama rendy dan usama datang, disusul om dan mam juga zhafira. Kupikir selesai sudah estafet jantung untuk berkenalan kepada orang-orang baru dari SMA Negeri 1 Taman. Namun ternyata muncul lagi 1 karakter asing. Datang dengan anggun dan lugunya, yang terbesit kala itu hanyalah, “kupikir aku mengenalnya”.</p>
-							
-						
+							<p>Mas nizar!, dialah orang pertama yang kusapa waktu itu. Sembari mencoba mengakrabkan diri, di dalam sanggar aku bertemu mas ping, kemudian mba nisa, elza dan 2 teman lama dari tsg, yap syaif dan mediana. Tak lama rendy dan usama datang, disusul om dan mam juga zhafira. Kupikir selesai sudah estafet jantung untuk berkenalan dengan orang-orang baru dari SMA Negeri 1 Taman. Namun ternyata muncul lagi 1 karakter asing yang datang dengan anggun dan lugunya. Kala itu Yang terbesit pada diri ini hanyalah, “kupikir aku mengenalnya”.</p>
+							<p>Saat dia datang, percayalah padaku, seisi ruangan menjadi benar-benar wangi karena dirinya. Dia yang datang memakai jas berwarna pink, serta berkerudung hitam dengan pakaiannya yang membuat dia nampak dewasa. Datang paling akhir disaat semua orang tengah duduk berpendapat tentang tim produksi. Setelah duduk, dirinya menjadi pusat perhatian yang cukup lama bagiku. </p>
+							<blockquote>“Siapa dirinya?, yang aku ingin katakan. Apakah kita pernah bertemu ?”  </blockquote>
+							<ul class="alt">
+								<li><b>-Sesi diam dimulai…</b></li>
+								<li></li>
+							</ul>
+							<p>Diam, diam, dan diam. Seperti tak ada lagi kalimat tuk kuucap sehari itu. Diriku hanya bisa sedikit berkata akan hal yang mungkin bisa kukerjakan saja. Terlepas dari hal itu, aku yang melihat kalian (PGT), merasa tertinggal jauh soal dunia per-teater-an. Apalagi setelah tau apa yang aku bisa lakukan disini adalah jauh dari apa yang ingin aku kerjakan. Maksudku, kalian telah terbagi dengan job-desc kalian masing-masing. Sedang aku baru, dan tak tau apa yang harus kulakukan.</p>
+							<blockquote>“Aku tak bisa terus diam seperti ini, aku harus mulai bicara”</blockquote>
+							<p>Hal yang pertama kali aku pikirkan adalah tentang pembagian job-desc saat itu. Setelah tau kalau Kak Nisa adalah seorang pimpinan produksi, tak lagi tahan mulut ini untuk segera bercakap ria tentang apa yang aku bisa lakukan di kegiatan kali ini. Hingga akhirnya, Waktu itu kita berdiskusi tentang media, dan kak nisa setuju soal apa yang kita sepakati tentang job-desc ku.</p>
+							<p>Setelah merasa lebih tenang bahwasannya diri ini merasa masih bisa diandalkan, aku kembali terdiam saat itu. Tak ada hal lain yang bisa kulakukan, selain hal-hal umum biasa atau mencoba membaur dan mendengar tentang apasih yang orang-orang disini bicarakan.</p>
+							<blockquote>“Jujur, mereka terlihat hebat dengan apa yang mereka bisa. Bagiku tak ada seorangpun yang tak memiliki kehebatan atas dirinya. Mungkin saat itu, dia hanya membutuhkan dukungan. Sedang aku tak tahu apa yang bisa kulakukan saat itu.”</blockquote>
+							<ul class="alt">
+								<li><b>-Bosan?…</b></li>
+								<li></li>
+							</ul>
+							<p>Hampir tak ada kata bosan, kembali ke cerita soal pusat perhatianku waktu itu. Aora, itulah namanya; Seorang gadis yang dari tadi menjadi pusat perhatianku, ternyata memiliki nama yang sangat berbeda dari apa yang aku biasa dengar di lingkunganku. Dari luar dia memancarkan semangat nya, cerah dan penuh bahagia. Paling tidak, itulah yang dia ingin sampaikan pada dunia. Namun, jika seorang sepertiku yang melihat, tidak ada yang dapat membohongiku atas perasaannya kecuali aku memang tak peduli.</p>
+							<blockquote>“Aku tak tahu kenapa, namun ada sesuatu dengannya, banyak hal. Namun, siapa aku.” -Sanggar Seni, 08 Nov 2020</blockquote>
+							<p>Pertama kali bertemu dengan dia, segalanya adalah tentang hal yang tak pernah aku duga sebelumnya. Jika aku pernah berkata soal perasaan dan keyakinan, aku sangat percaya pada apa yang dikatakan oleh hati ini. Namun, aku juga bingung kenapa kali ini, saat dirinya ada disini, orang yang baru aku temui. Diri ini mencurahkan banyak hal yang tak bisa diungkap dengan kata-kata. Jikapun aku dapat menceritakannya, mungkin seperti perasaan mendebarkan saat akan melakukan test atau hal-hal lain seperti wawancara, yang kemudian diimbangi dengan nafas berat saat kau rasa hidup mu tak lagi tersisa untukmu (lebay). Hal itu benar, hanya saja kali ini, segalanya terasa lebih tenang.</p>
+							<blockquote>“Aku merasa begitu yakin kepada waktu, yang mungkin kelak akan memberikanku jalan untuk lebih dekat dengannya. Kupikir, jikapun bukan seperti itu jadinya, mungkin aku juga masih akan menjadi temannya. Hal itu sudah lebih dari cukup untukku.” <i>- Sejujur-jujurnya hari itu.</i></blockquote>
+							<p>	Hari itu aku bertanya pada diriku, apa yang aku pikirkan. Sejauh apa aku berpikir soal gadis yang baru hari itu kulihat, bahkan kenal pun tak sempat!. Apa yang sampai membuatku hanya dengan melihatnya saja aku bingung dan tak tau harus berkata apa. Jika aku diperhatikan, ketahuilah melihatnya secara diam-diam telah banyak kulakukan hari itu. Jika bertanya soal perasaanku kala itu, aku tak tahu harus berkata apa. Yang jelas, dari hari itu aku ingin mengenal dia lebih dekat.</p>
+							<pre><code>Banyak hal lain yang kuperhatikan darimu, namun tak hanya sebatas pada hari itu (08-Nov-2020). Pada waktu itu, di hari itu. segalanya mungkin belum tertuang olehku kedalam kisah kali ini. Namun, yang jelas, aku akui bahwa aku mulai menyukaimu semenjak hari itu, dimana aku bisa melihat dan memperhatikanmu dengan segala tingkah dan lucumu.</code></pre>
+
+
+
 						</div>
 					</div>
 
