--- a/note/08nov2020/index.html
+++ b/note/08nov2020/index.html
@@ -4,7 +4,7 @@ Made by me. Apa lihat-lihat?
 -->
 <html>
 	<head>
-		<title>Selamat Ulang Tahun</title>
+		<title>🎉Selamat Ulang Tahun !!🎉</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="https://shiroezero.github.io/aorasaphiere/note/assets/css/main.css" />
