--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <!--
-	APA LIAT LIAT!!
+Samting hidden, aora gabakal tau ini sih. kalo pun aora tau mungkin aku yang bakal kasih tau, wkwk.
+Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini inget ini ya "18 April 2021"
 -->
 <html>
 	<head>
-		<title>Selamat Ulang Tahun</title>
+		<title>🎉Selamat Ulang Tahun !!🎉</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>
-					HBD KAMU!!</h1>
+					HBD KAMU</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Ucapku</a></li>
@@ -69,25 +70,25 @@
 						<h2>5 bulan</h2>
 						<p>5 bulan bareng kamu tuh. bener-bener kek keajaiban deh!. banyak hal yang masih belum aku tau dari kamu sih.., <br>
 						  <br>
-				         <em>"Mau bacain samting </em>g<em>a? coba <a href="note/">sini deh.</a>"</em></p>
+				         <em>"Mau bacain samting ga? coba <a href="shiroezero.github.io/aorasaphiere/note">sini deh.</a>"</em></p>
 					</header>
 
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="Sesuatu yang harus tak pernah hilang." alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Satu lagi yang manis, dari buku tentangmu." alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Yauda, janji deh!" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Hari itu, sehari paling lama denganmu." alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="Tentang 3 hari tanpamu." alt="" /></a>
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Tanganku ko hitem ya" alt="" /></a>
@@ -102,8 +103,9 @@
 				<div class="content">
 					<header>
 						<h2>Jadi,</h2>
-						<p><br>
-					    Sesuatu yang lain nihh! <a href="https://shiroezero.github.io/tentangkamu">kesini deh!</a></p>
+						<p>Maaf ku untukmu, namun hanya ini yang bisa kuberikan untukmu hari ini sebagai suatu hal. Karena aku bahkan tak tahu apa hal ini bisa dibilang sebagai hadiah atau apa?. Yang jelas, website ini dibuat dengan penuh perasaan dariku buat Aora Saphiere Devinatasya yang hari ini sedang berulang tahun, dan kuharap kamu suka !. Selamat ulang tahun!!🎉🎉</p>
+
+						<p>Happy reading !, Searching, or maybe lookin’ for somethin' !. wkwk</p>
 					</header>
 </div>
 			</section>
