--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+z<!DOCTYPE HTML>
 <!--
 Samting hidden, aora gabakal tau ini sih. kalo pun aora tau mungkin aku yang bakal kasih tau, wkwk.
 Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini inget ini ya "18 April 2021"
@@ -70,7 +70,7 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini inget ini ya "18 Apr
 						<h2>5 bulan</h2>
 						<p>5 bulan bareng kamu tuh. bener-bener kek keajaiban deh!. banyak hal yang masih belum aku tau dari kamu sih.., <br>
 						  <br>
-				         <em>"Mau bacain samting ga? coba <a href="shiroezero.github.io/aorasaphiere/note">sini deh.</a>"</em></p>
+				         <em>"Mau bacain samting ga? coba <a href="note/">sini deh.</a>"</em></p>
 					</header>
 
 					<!-- Gallery  -->
