--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-z<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <!--
 Samting hidden, aora gabakal tau ini sih. kalo pun aora tau mungkin aku yang bakal kasih tau, wkwk.
-Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini inget ini ya "18 April 2021"
+Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini, aku pengen kamu buat janji yang harus aku tepatin ke kamu!
 -->
 <html>
 	<head>
@@ -16,13 +16,13 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini inget ini ya "18 Apr
 		<!-- Header -->
 			<header id="header">
 				<h1>
-					HBD KAMU</h1>
+					19 Tahun!</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Ucapku</a></li>
 						<li><a href="#one">Sedikit Harapku</a></li>
 						<li><a href="#two">Aku, buatmu</a></li>
-						<li><a href="#work">Ini buat kamu!</a></li>
+						<li><a href="#work">5 Bulan</a></li>
 						<li><a href="#contact">Jadi,</a></li>
 					</ul>
 				</nav>
@@ -47,7 +47,7 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini inget ini ya "18 Apr
 					<header>
 						<h2>Sedikit Harapku</h2>
 					</header>
-					<p> Diumurmu  yang ke 19 tahun ini, semoga banyak hal yang sebelumnya </p>
+					<p> Pada hari menua ke-19 tahunmu kali ini, kudoakan padamu atas segala harap indah yang ingin engkau wujudkan untuk hidupmu. Semoga kelak terkabulkan, dan menjadi buah syukur serta bahagiamu. Aku tak pernah tau dengan jelas apa yang engkau inginkan untuk segala harap atau juga anganmu. Jadi, izinkan aku untuk selalu berada disampingmu, menyertaimu dengan doa-doaku atas bahagia dan semangatmu, yang kemudian menjadi landasan untuk jalanmu menuju sukses yang sesungguhnya. Aamiin.. Aamiin ya Robbal 'Aalamiin.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -56,9 +56,9 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini inget ini ya "18 Apr
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Aku, buatmu</h2>
+						<h2>Sesuatu</h2>
 					</header>
-					<p>aku bisa jadi aapasdklasdklasdjklasjdkljd alskdfjklasjd askldjaskl sad askdj skladjsakl jlask djsakdjsakldj lkaj dklasjlk jaskl klsajdl kadskla jdklsa jdlkajsd lksajd klasj dlkas jlkasj lka&nbsp; jaslk jdskladj salkjd klasd jlkasjklsadj slak jdlaks jdlkasj dlkajklsadj skla djalskd jaklsdj askldj askldj klas djlkas jklas jsalkj slakj sklaj laksjkls klasd jklasdj kl asdjklas djklas lkd jslaj lkasd jklasdj lksd jlaksd jlkasd jsklajd lkasjd lkasjd klasjdl kasad sjlsa jlsa jl ajslk jlsaj lsa jls ajlks ajlskaj dlkas jdlkasdj lask jlkasdj laskjd lask jlsakdj lkaj lkasj&nbsp;</p>
+					<p></p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -68,9 +68,9 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini inget ini ya "18 Apr
 				<div class="content">
 					<header>
 						<h2>5 bulan</h2>
-						<p>5 bulan bareng kamu tuh. bener-bener kek keajaiban deh!. banyak hal yang masih belum aku tau dari kamu sih.., <br>
-						  <br>
-				         <em>"Mau bacain samting ga? coba <a href="note/">sini deh.</a>"</em></p>
+						<p>5 bulan denganmu, masih banyak lagi hal yang ingin kunanti darimu!. ingatkah akan kalimatku padamu dulu?, aku pernah berkata untuk <i>“Mari buat kisah denganku?!”</i>. Waktu itu kamu belum menjawabnya, bahkan setelah 5 bulan lamanya. Jadi hari ini, atau besok setelah bangun sahur, bisa dijawab ya?, wkwk.<br>
+						<p>Meski dengan banyaknya hal yang belum kau bacakan padaku dari buku kehidupanmu. Kau tau?, aku tak apa untuk hal itu, ingatlah aku sabar menanti ceritamu. Untuk sekarang, adalah tentang bagaimana lembar baru ini nanti kamu tulis, dengan ikut serta dari namaku yang kelak tertulis disana. Sebuah nama yang kamu tulis dengan segala perasaan senang maupun sedihmu, namun semoga bukan untuk jatuh dan sesalmu. Yang terbaik bagimu!.</p>
+						<em>"Mau bacain samting ga? coba <a href="note/">sini deh.</a>"</em></p>
 					</header>
 
 					<!-- Gallery  -->
@@ -105,7 +105,7 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini inget ini ya "18 Apr
 						<h2>Jadi,</h2>
 						<p>Maaf ku untukmu, namun hanya ini yang bisa kuberikan untukmu hari ini sebagai suatu hal. Karena aku bahkan tak tahu apa hal ini bisa dibilang sebagai hadiah atau apa?. Yang jelas, website ini dibuat dengan penuh perasaan dariku buat Aora Saphiere Devinatasya yang hari ini sedang berulang tahun, dan kuharap kamu suka !. Selamat ulang tahun!!🎉🎉</p>
 
-						<p>Happy reading !, Searching, or maybe lookin’ for somethin' !. wkwk</p>
+						<p>Happy reading !, Searching, or maybe lookin’ for somethin' !, wkwk.</p>
 					</header>
 </div>
 			</section>
@@ -113,7 +113,7 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini inget ini ya "18 Apr
 		<!-- Footer -->
 			<footer id="footer">
 					<ul class="menu">
-						<li> Samting that i made with <a href="">Love</a></li>
+						<li>Locally crafted with <a href="secret02/">Love ❤️</a></li>
 					</ul>
 
 			</footer>
